--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
-    <a href="#booking" class="cta-button">Book Now</a>
+    <a href="contact.html" class="cta-button">Book Now</a>
   </header>
 
   <section class="sec_1" id="home">
